--- a/everything-presence-mmwave-configurator/backend/package.json
+++ b/everything-presence-mmwave-configurator/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "npm exec -- tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "lint": "echo \"(no lint configured yet)\""
   },
