--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Everything Presence Add-ons
-url: 'https://github.com/everythingsmarthome/everything-presence-addons'
-maintainer: Everything Smart Home <github@everythingsmart.io>
+name: Everything Presence Add-ons test
+url: 'https://github.com/poopoopootrain0/everything-presence-addons'
+maintainer: poopoopootrain0
