--- a/everything-presence-mmwave-configurator/Dockerfile
+++ b/everything-presence-mmwave-configurator/Dockerfile
@@ -4,37 +4,46 @@ FROM node:20-alpine AS build
 WORKDIR /app
 ENV NODE_ENV=development
 
-# Install dependencies for workspace build
+# Copy workspace package files
 COPY package.json package-lock.json ./
 COPY backend/package.json backend/package.json
 COPY frontend/package.json frontend/package.json
+
+# Install all dependencies (including dev) offline
 RUN npm ci --include=dev
 
-# Add node_modules/.bin to PATH so scripts find local binaries
+# Add node_modules/.bin to PATH for local binaries (tsc, vite)
 ENV PATH=/app/node_modules/.bin:$PATH
 
-# Copy sources and build
+# Copy sources
 COPY backend backend
 COPY frontend frontend
+
+# Build backend and frontend
 RUN npm run build --workspaces
+
+# Prune devDependencies for production
 RUN npm prune --omit=dev --workspaces
 
+########################
+# Build addon image
+########################
 FROM ${BUILD_FROM} AS addon
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+WORKDIR /app
 ENV NODE_ENV=production \
     PORT=42069 \
     FIRMWARE_LAN_PORT=38080 \
     FRONTEND_DIST=/app/frontend/dist
-WORKDIR /app
 
+# Install node runtime only
 RUN apk add --no-cache nodejs npm
 
-COPY --from=build /app/package.json /app/package-lock.json ./
-COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/backend/package.json ./backend/package.json
-COPY --from=build /app/backend/node_modules ./backend/node_modules
+# Copy built artifacts and runtime dependencies
 COPY --from=build /app/backend/dist ./backend/dist
 COPY --from=build /app/frontend/dist ./frontend/dist
+COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/package.json /app/package-lock.json ./
 COPY config ./config
 COPY rootfs/ /
 
@@ -43,6 +52,9 @@ RUN rm -rf /etc/services.d/zone-configurator && \
 
 EXPOSE 42069/tcp 38080/tcp
 
+########################
+# Standalone image
+########################
 FROM node:20-alpine AS standalone
 WORKDIR /app
 ENV NODE_ENV=production \
@@ -50,16 +62,16 @@ ENV NODE_ENV=production \
     FIRMWARE_LAN_PORT=38080 \
     FRONTEND_DIST=/app/frontend/dist
 
-COPY --from=build /app/package.json /app/package-lock.json ./
-COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/backend/package.json ./backend/package.json
-# COPY --from=build /app/backend/node_modules ./backend/node_modules
 COPY --from=build /app/backend/dist ./backend/dist
 COPY --from=build /app/frontend/dist ./frontend/dist
+COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/package.json /app/package-lock.json ./
 COPY config ./config
 
 EXPOSE 42069/tcp 38080/tcp
 CMD ["node", "backend/dist/index.js"]
 
-# Default build target for Home Assistant add-on builds.
+########################
+# Default build target
+########################
 FROM addon AS final
