--- a/everything-presence-mmwave-configurator/Dockerfile
+++ b/everything-presence-mmwave-configurator/Dockerfile
@@ -1,44 +1,32 @@
 ARG BUILD_FROM=ghcr.io/hassio-addons/base:19.0.0
 
-# -------------------------
-# Build Stage
-# -------------------------
+########################################
+# Build stage (offline-proof)
+########################################
 FROM node:20-alpine AS build
 WORKDIR /app
 ENV NODE_ENV=development
 
-# Copy root & workspace package files
+# Copy package files and prebuilt node_modules
 COPY package.json package-lock.json ./
 COPY backend/package.json backend/package.json
 COPY frontend/package.json frontend/package.json
+COPY node_modules ./node_modules   # offline-proof
 
-# Install root dependencies (hoisted)
-RUN npm ci --include=dev
+# Copy source code
+COPY backend backend
+COPY frontend frontend
 
-# Copy and install backend
-WORKDIR /app/backend
-COPY backend/package.json ./package.json
-RUN npm ci --include=dev
-
-# Copy and install frontend
-WORKDIR /app/frontend
-COPY frontend/package.json ./package.json
-RUN npm ci --include=dev
-
-# Copy sources
-WORKDIR /app
-COPY backend ./backend
-COPY frontend ./frontend
-
-# Add local binaries to PATH
-ENV PATH=/app/node_modules/.bin:/app/backend/node_modules/.bin:/app/frontend/node_modules/.bin:$PATH
-
-# Build all workspaces
+# Build all workspaces (tsc & vite from hoisted node_modules)
+ENV PATH=/app/node_modules/.bin:$PATH
 RUN npm run build --workspaces
 
-# -------------------------
-# Addon Stage
-# -------------------------
+# Remove devDependencies to shrink image
+RUN npm prune --omit=dev --workspaces
+
+########################################
+# Home Assistant add-on image
+########################################
 FROM ${BUILD_FROM} AS addon
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ENV NODE_ENV=production \
@@ -47,8 +35,10 @@ ENV NODE_ENV=production \
     FRONTEND_DIST=/app/frontend/dist
 WORKDIR /app
 
+# Add Node (runtime only)
 RUN apk add --no-cache nodejs npm
 
+# Copy built app
 COPY --from=build /app/package.json /app/package-lock.json ./
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/backend/package.json ./backend/package.json
@@ -58,14 +48,15 @@ COPY --from=build /app/frontend/dist ./frontend/dist
 COPY config ./config
 COPY rootfs/ /
 
+# Make sure s6 service is executable
 RUN rm -rf /etc/services.d/zone-configurator && \
     chmod +x /etc/s6-overlay/s6-rc.d/zone-configurator/run
 
 EXPOSE 42069/tcp 38080/tcp
 
-# -------------------------
-# Standalone Stage
-# -------------------------
+########################################
+# Standalone node image
+########################################
 FROM node:20-alpine AS standalone
 WORKDIR /app
 ENV NODE_ENV=production \
@@ -73,6 +64,7 @@ ENV NODE_ENV=production \
     FIRMWARE_LAN_PORT=38080 \
     FRONTEND_DIST=/app/frontend/dist
 
+# Copy built app
 COPY --from=build /app/package.json /app/package-lock.json ./
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/backend/package.json ./backend/package.json
@@ -83,7 +75,7 @@ COPY config ./config
 EXPOSE 42069/tcp 38080/tcp
 CMD ["node", "backend/dist/index.js"]
 
-# -------------------------
-# Default Home Assistant Add-on build target
-# -------------------------
+########################################
+# Default build target for Home Assistant add-on
+########################################
 FROM addon AS final
