--- a/everything-presence-mmwave-configurator/Dockerfile
+++ b/everything-presence-mmwave-configurator/Dockerfile
@@ -1,73 +1,74 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base:19.0.0
-
-########################################
-# Build stage (offline-proof)
-########################################
+# -----------------------------
+# Build stage (local, optional)
+# -----------------------------
 FROM node:20-alpine AS build
 WORKDIR /app
 ENV NODE_ENV=development
 
-# Copy package files and prebuilt node_modules
+# Copy package files
 COPY package.json package-lock.json ./
-COPY backend/package.json backend/package.json
-COPY frontend/package.json frontend/package.json
-COPY node_modules ./node_modules   # offline-proof
+COPY backend/package.json backend/
+COPY frontend/package.json frontend/
+
+# Install all deps including devDeps (requires network once)
+RUN npm ci --include=dev
 
 # Copy source code
 COPY backend backend
 COPY frontend frontend
 
-# Build all workspaces (tsc & vite from hoisted node_modules)
-ENV PATH=/app/node_modules/.bin:$PATH
+# Build backend and frontend
 RUN npm run build --workspaces
 
-# Remove devDependencies to shrink image
-RUN npm prune --omit=dev --workspaces
-
-########################################
-# Home Assistant add-on image
-########################################
+# -----------------------------
+# Add-on stage (offline-proof)
+# -----------------------------
+ARG BUILD_FROM=ghcr.io/hassio-addons/base:19.0.0
 FROM ${BUILD_FROM} AS addon
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+WORKDIR /app
+
 ENV NODE_ENV=production \
     PORT=42069 \
     FIRMWARE_LAN_PORT=38080 \
     FRONTEND_DIST=/app/frontend/dist
-WORKDIR /app
 
-# Add Node (runtime only)
+# Install only Node (production deps already built)
 RUN apk add --no-cache nodejs npm
 
-# Copy built app
+# Copy package.json and production node_modules
 COPY --from=build /app/package.json /app/package-lock.json ./
 COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/backend/package.json ./backend/package.json
-COPY --from=build /app/backend/node_modules ./backend/node_modules
+
+# Copy built backend & frontend
 COPY --from=build /app/backend/dist ./backend/dist
 COPY --from=build /app/frontend/dist ./frontend/dist
+
+# Copy add-on config and rootfs
 COPY config ./config
 COPY rootfs/ /
 
-# Make sure s6 service is executable
-RUN rm -rf /etc/services.d/zone-configurator && \
-    chmod +x /etc/s6-overlay/s6-rc.d/zone-configurator/run
+RUN rm -rf /etc/services.d/zone-configurator \
+    && chmod +x /etc/s6-overlay/s6-rc.d/zone-configurator/run
 
 EXPOSE 42069/tcp 38080/tcp
 
-########################################
-# Standalone node image
-########################################
+# Default command
+CMD ["node", "backend/dist/index.js"]
+
+# -----------------------------
+# Optional standalone image
+# -----------------------------
 FROM node:20-alpine AS standalone
 WORKDIR /app
+
 ENV NODE_ENV=production \
     PORT=42069 \
     FIRMWARE_LAN_PORT=38080 \
     FRONTEND_DIST=/app/frontend/dist
 
-# Copy built app
 COPY --from=build /app/package.json /app/package-lock.json ./
 COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/backend/package.json ./backend/package.json
 COPY --from=build /app/backend/dist ./backend/dist
 COPY --from=build /app/frontend/dist ./frontend/dist
 COPY config ./config
@@ -75,7 +76,5 @@ COPY config ./config
 EXPOSE 42069/tcp 38080/tcp
 CMD ["node", "backend/dist/index.js"]
 
-########################################
 # Default build target for Home Assistant add-on
-########################################
 FROM addon AS final
